# WebWizard

./: .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
app/: main.py
app/api/: api.py
app/api/endpoints/: deploy.py  preview.py  templates.py  website.py
app/core/: config.py  session.py
app/crud/: ai_templates.py
app/db/: init_db.py
app/models/: ai_templates.py
app/schemas/: ai_templates.py  website.py
app/services/: deployment.py  prompt_service.py  website_generator.py
app/static/css/: style.css
app/static/js/: main.js  main.js.bak  preview.js
app/static/js/modules/: generation.js  pdfDownload.js  styleTemplate.js  websiteType.js
app/templates/: index.html  preview.html
app/utils/: language_detector.py
scripts/: init_db.py
static/css/: style.css
static/js/: main.js  main.new.js  preview.js
static/js/modules/: apiToken.js  contentInput.js  deploy.js  deployment.js  form-validation.js  generation.js  language.js  navigation.js  photoUpload.js  preview.js  selection.js  styleTemplate.js  terms.js  theme.js  validation.js  website-generation.js
templates/: index.html  preview.html
