[project]
name = "webwizard"
version = "0.1.0"
description = "AI-powered website generator"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.9",
    "langdetect>=1.0.9",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
